--- a/Грьци.mw
+++ b/Грьци.mw
@@ -12,44 +12,44 @@
 '''Грьци''' ({{Lang-el|Ελλάδα}}, епїсимьно имѧ '''Грьчьска Димократї''', {{Lang-el|Ελληνική Δημοκρατία}}) [[Южьна Еѵрѡпа|Южьны Еѵрѡпы]] дрьжава ѥстъ. Стольнъ градъ Грькъ [[Аѳины]] ѥстъ, людии обитаѥтъ 10,9 леѡдръ. Дрьжавьнъ [[Грьчьскъ ѩзыкъ|грьчьскъ]] ѥстъ. Дрьжавьна вѣра [[Православиѥ]] ѥстъ<ref>Виждь Грькъ ѹставъ къниѕѣ "''Конституции государств Европейского Союза''". М., 1997, стр. 245—246</ref>.
 
 == Їсторї ==
-[[Видъ:Flag of Greece (1828-1978).svg|thumb|left|Грькь знамѧ (1828-1978).]]1453 лѣта [[Вѷзантїн҄ьска аѷтократорї]] въшьла въ съставъ Осман҄ьскы аѷтократорїѩ бѣ. 1821 лѣта по народьнѣ въстании Грьци ѥстъ пакы самостотел҄ьна дрьжава. По 1833 лѣтѣ ихъже имѧ Грьчьско Кралѥвьство бѣ. По [[Вътора Свѣтьна Воина|Въторѣи Свѣтьнѣи Воинѣ]] Грьци пакы димократї ѥстъ.
+[[Видъ:Flag of Greece (1828-1978).svg|thumb|left|Грькь знамѧ (1828—1978).]]1453 лѣта [[Вѷзантїн҄ьска аѷтократорї]] въшьла въ съставъ Осман҄ьскы аѷтократорїѩ бѣ. 1821 лѣта по народьнѣ въстании Грьци ѥстъ пакы самостотел҄ьна дрьжава. По 1833 лѣтѣ ихъже имѧ Грьчьско Кралѥвьство бѣ. По [[Вътора Свѣтьна Воина|Въторѣи Свѣтьнѣи Воинѣ]] Грьци пакы димократї ѥстъ.
 
 1981 лѣта Грьци въшьли въ съставъ [[Еѵропьскыи Свѫзъ|Еѵропьскы Свѫзи]] бѣ.
 
-== Грькь чѧсти ==
-Грьчьскы Димократїѩ чѧсти перїферїѩ ({{Lang-el|περιφέρειες}}) нарицаютъ сѧ. Ихъже малы чѧсти имѧ номъ ({{Lang-el|νομός}}) сѫть.
-{| class="sortable" cellSpacing="0" cellPadding="0" border="1" style="text-align:left; font-size:90%"
+== Грькъ чѧсти ==
+Грьчьскы Димократїѩ чѧсти перїферїѧ ({{Lang-el|περιφέρειες}}) нарицаютъ. Ихъже малы чѧсти имѧ номи ({{Lang-el|νομός}}) сѫтъ.
+{| class="sortable" style="text-align:left; font-size:90%"
 |- style="font-size:100%; text-align:left"
 !width="40px"| Харта !! Число !!width="140px"| Перїферїѩ!!width="80px"| Главьнъ градъ !!width="80px"| Площѧдь !!width="80px"| Людии обитаѥтъ</tr>
 | rowspan=15 | [[Image:GreeceNumberedPerepheries.png|300px]]
 |-
-| 1 || [[Аттїкъ]] (Αττική) || [[Аѳины]] || style="text-align:right"|3,808 к҃м²|| style="text-align:right"|3,841,408
+| 1 || [[Аттїка]] (Αττική) || [[Аѳины]] || style="text-align:right"|3,808 к҃м²|| style="text-align:right"|3,841,408
 |-
-| 2 || [[Срѣдьн Еллада]] (Κεντρική Ελλάδα) || [[Ламї]] || style="text-align:right"|15,549 к҃м²|| style="text-align:right"|614,614
+| 2 || [[Срѣдьн Елладь]] (Στερεά Ελλάδα) || [[Ламї]] || style="text-align:right"|15,549 к҃м²|| style="text-align:right"|614,614
 |-
 | 3 || [[Срѣдьн Македонї]] (Κεντρική Μακεδονία) || [[Ѳессалонїка]] ||style="text-align:right"|18,811 к҃м²|| style="text-align:right"|1,931,870
 |-
-| 4 || [[Критъ]] (Κρήτη) || [[Ираклеонъ]] || style="text-align:right"|6,336 к҃м²|| style="text-align:right"|623,666
+| 4 || [[Крита]] (Κρήτη) || [[Иракліѥ]] || style="text-align:right"|6,336 к҃м²|| style="text-align:right"|623,666
 |-
-| 5 || [[Вьсточьна Македонї и Ѳракї]] (Ανατολική Μακεδονία και Θράκη) || [[Комотинъ]] || style="text-align:right"|14,157 к҃м²|| style="text-align:right"|623,248
+| 5 || [[Вьсточьна Македонї и Ѳрака]] (Ανατολική Μακεδονία και Θράκη) || [[Комотина]] || style="text-align:right"|14,157 к҃м²|| style="text-align:right"|623,248
 |-
 | 6 || [[Ипїръ]] (Ήπειρος) || [[Їѡаннїна]] ||style="text-align:right"|9,203 к҃м²|| style="text-align:right"|358,698
 |-
 | 7 || [[Їонїискы острова]] (Ιόνια νησιά) || [[Керкѷра]] || style="text-align:right"|2,307 к҃м²|| style="text-align:right"|220,097
 |-
-| 8 || [[Сѣверьны Аїгаїискы острова]] (Βορείου Αιγαίου) || [[Мѷтиленъ]] || style="text-align:right"|3,836 km²|| style="text-align:right"|208,151
+| 8 || [[Сѣверьны Егеискы острова]] (Βορείου Αιγαίου) || [[Мѷтїлина]] || style="text-align:right"|3,836 km²|| style="text-align:right"|208,151
 |-
 | 9 || [[Пелопоннисъ]] (Πελοπόννησος) || [[Трїполь]] || style="text-align:right"|15,490 km²|| style="text-align:right"| 650,310 
 |-
-| 10 || [[Южьны Аїгаїискы острова]] (Νοτίου Αιγαίου) || [[Ермѹполь]] || style="text-align:right"|5,286 km²|| style="text-align:right"|320,001
+| 10 || [[Южьны Егеискы острова]] (Νοτίου Αιγαίου) || [[Ермѹполь]] || style="text-align:right"|5,286 km²|| style="text-align:right"|320,001
 |-
-| 11 || [[Ѳессалї]] (Θεσσαλία) || [[Ларїсса]] || style="text-align:right"|14.037 km²|| style="text-align:right"|760,714
+| 11 || [[Ѳессалї]] (Θεσσαλία) || [[Ларїса]] || style="text-align:right"|14.037 km²|| style="text-align:right"|760,714
 |-
-| 12 || [[Западьна Еллада]] (Δυτική Ελλάδα) || [[Патръ]] || style="text-align:right"|11,350 km²|| style="text-align:right"|753,267
+| 12 || [[Западьна Елладь]] (Δυτική Ελλάδα) || [[Патра]] || style="text-align:right"|11,350 km²|| style="text-align:right"|753,267
 |-
-| 13 || [[Западьна Македонї]] (Δυτική Μακεδονία) || [[Козанъ]] || style="text-align:right"|9,451 km²|| style="text-align:right"|303,857
+| 13 || [[Западьна Македонї]] (Δυτική Μακεδονία) || [[Козана]] || style="text-align:right"|9,451 km²|| style="text-align:right"|303,857
 |-
-| - || [[Аѳонъ]] || [[Карѵесъ]] || style="text-align:right"|390 km²|| style="text-align:right"|2,250
+| - || [[Аѳѡнъ]] || [[Карѵѩ]] || style="text-align:right"|390 km²|| style="text-align:right"|2,250
 |}
 
 == Грькъ наибол҄ьше гради ==
