/* Грькъ наибол҄ьше гради */ исправление

--- a/Грьци.mw
+++ b/Грьци.mw
@@ -55,8 +55,8 @@
 == Грькъ наибол҄ьше гради ==
 * [[Аѳины]] – людии обитаѥтъ 3 761 810.
 * [[Ѳессалонїка]] – людии обитаѥтъ 348 920.
-* [[Патръ]] – людии обитаѥтъ 164 741.
-* [[Ираклеонъ]]  – людии обитаѥтъ 140 357.
+* [[Патра]] – людии обитаѥтъ 164 741.
+* [[Ираклїѥ]]  – людии обитаѥтъ 140 357.
 * [[Корінѳъ]] – людии обитаѥтъ 36,555.
 
 == Зьри такожде ==
