--- a/Грьци.mw
+++ b/Грьци.mw
@@ -29,7 +29,7 @@
 |-
 | 3 || [[Срѣдьн Македонї]] (Κεντρική Μακεδονία) || [[Ѳессалонїка]] ||style="text-align:right"|18,811 к҃м²|| style="text-align:right"|1,931,870
 |-
-| 4 || [[Крита]] (Κρήτη) || [[Иракліѥ]] || style="text-align:right"|6,336 к҃м²|| style="text-align:right"|623,666
+| 4 || [[Крита]] (Κρήτη) || [[Ираклїѥ]] || style="text-align:right"|6,336 к҃м²|| style="text-align:right"|623,666
 |-
 | 5 || [[Вьсточьна Македонї и Ѳрака]] (Ανατολική Μακεδονία και Θράκη) || [[Комотина]] || style="text-align:right"|14,157 к҃м²|| style="text-align:right"|623,248
 |-
