--- a/Корїнѳъ.mw
+++ b/Корїнѳъ.mw
@@ -1,6 +1,14 @@
-'''Корїнѳъ''' (''Κόρινθος'') градъ [[Грьци|Грьцѣхъ]] ѥстъ.
+{{Градъ|Имѧ = Ѳессалонїка
+| знамѧ= 
+| знакъ = 
+| Дрьжава = Грьци
+| Глава = 
+| Людии = 36,555
+| Основанъ = невѣдомо ѥстъ
+| Харта = [[Видъ:Corinth map.png|200 px]]
+|}}
+'''Корїнѳъ''' ({{Lang-el|Κόρινθος}}) градъ [[Грьци|Грьцѣхъ]] ѥстъ. Людии обитаѥтъ 36,5 тысѫщь
 
-[[Category:All orphaned pages]]
 [[Category:Гради]]
 [[Category:Грьци]]
 
