--- a/Корїнѳъ.mw
+++ b/Корїнѳъ.mw
@@ -7,6 +7,7 @@
 | Основанъ = невѣдомо ѥстъ
 | Харта = [[Видъ:Corinth map.png|200 px]]
 |}}
+[[Видъ:Acrocorinto.jpg|thumb|left|]]
 '''Корїнѳъ''' ({{Lang-el|Κόρινθος}}) градъ [[Грьци|Грьцѣхъ]] ѥстъ. Людии обитаѥтъ 36,5 тысѫщь
 
 [[Category:Гради]]
