*Empty MediaWiki Message*

--- a/Щипъ.mw
+++ b/Щипъ.mw
@@ -1,2 +1,26 @@
-'''Щипъ''' ѥстъ градъ [[Македонїıа|Македонїѩ]]. 
+{{Градъ|Имѧ = Щипъ
+| знамѧ= 
+| знакъ = CoA Shtip MK.png
+| Дрьжава = Македонїıа
+| Глава = 
+| Людии = 43 625
+| Основанъ = невѣдомо ѥстъ
+| Харта = [[Видъ:MK Stip.png|200 px]]
+|}}
+'''Щипъ''' ѥстъ градъ [[Македонї|Македонїѩ]]. Людии обитаѥтъ 43 тысѫщи.
 [[Category:Гради]]
+[[en:Štip]]
+[[bg:Щип]]
+[[cs:Štip]]
+[[da:Štip]]
+[[de:Štip]]
+[[fr:Chtip]]
+[[hsb:Štip]]
+[[mk:Штип]]
+[[nl:Štip]]
+[[pl:Štip]]
+[[sr:Штип]]
+[[sh:Štip]]
+[[fi:Štip]]
+[[sv:Štip]]
+[[tr:İştip]]
