*Empty MediaWiki Message*

--- a/Щипъ.mw
+++ b/Щипъ.mw
@@ -4,7 +4,7 @@
 | Дрьжава = Македонїıа
 | Глава = 
 | Людии = 43 625
-| Основанъ = невѣдомо ѥстъ
+| Основанъ =  г҃ вѣкъ до х҃р
 | Харта = [[Видъ:MK Stip.png|200 px]]
 |}}
 '''Щипъ''' ѥстъ градъ [[Македонї|Македонїѩ]]. Людии обитаѥтъ 43 тысѫщи.
