*Empty MediaWiki Message*

--- a/Москъва.mw
+++ b/Москъва.mw
@@ -1,11 +1,11 @@
-{{Градъ|name = Москъва
+{{Градъ|Имѧ = Москъва
 | знамѧ= Flag of Moscow (Russia).png
 | знакъ = Coat of Arms of Moscow.png
 | Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
 | Глава = Юрии Лѫжьковъ
 | Людии = 10.472.629 
 | Основанъ = 1147
-| map = [[Видъ:Moscow In Europe.png|200 px]]
+| Харта = [[Видъ:Moscow In Europe.png|200 px]]
 |}}
 '''Москъва''' ({{Lang-cu| Москы}}, генїка Москъве. словесе образъ Москъва съ рѹсьскаѥго ѩзыка ѩтъ ѥстъ, {{lang-ru|Москва}}) стольнъ градъ [[Рѡсї|Рѡсїѩ]] ѥстъ, построѥна ѥстъ рѣцѣ [[Москъва (рѣка)|Москъвѣ]]. Срьдьце [[Москъвьска область|Москъвьскы]] области ѥсть. Въ Мосъкве 10.472.629 людии обитаѥтъ.
 [[Category:Гради]]
