--- a/Москъва.mw
+++ b/Москъва.mw
@@ -8,6 +8,7 @@
 | Харта = [[Видъ:Moscow In Europe.png|200 px]]
 |}}
 '''Москъва''' ({{Lang-cu| Москы}}, генїка Москъве. словесе образъ Москъва съ рѹсьскаѥго ѩзыка ѩтъ ѥстъ, {{lang-ru|Москва}}) стольнъ градъ [[Рѡсї|Рѡсїѩ]] ѥстъ, построѥна ѥстъ рѣцѣ [[Москъва (рѣка)|Москъвѣ]]. Срьдьце [[Москъвьска область|Москъвьскы]] области ѥсть. Въ Мосъкве 10.472.629 людии обитаѥтъ.
+{{commonscat|Moscow}}
 [[Category:Гради]]
 [[Category:Рѡсї]]
 [[Category:Стольни гради]]
