--- a/Новосибирьскъ.mw
+++ b/Новосибирьскъ.mw
@@ -9,7 +9,7 @@
 }}
 '''Новосибирьскъ''' ({{Lang-ru|Новосибирск}}) [[Рѡсї|Рѡсїѩ]] градъ ѥсть. Новосибирьскъ наиболии градъ [[Сибирь|Сибири]] ѥсть. Главьнъ градъ [[Новосибирьска область|Новосибирьскы]] области ѥстъ.
 Построѥнъ [[Прѣзъсибирьскъ колѣинъ пѫть|Прѣзъсибирьсцѣ колѣинѣ пѫти]] ѥстъ.
-
+{{commonscat|Novosibirsk}}
 [[Category:Гради]]
 [[Катигорї:Рѡсї]]
 [[Category:Прѣзъсибирьскъ колѣинъ пѫть]]
