--- a/Самара.mw
+++ b/Самара.mw
@@ -11,6 +11,7 @@
 <gallery>
 Image:Coat_of_Arms_of_Samara_(Samara_oblast)_(1780).png|Древльн҄ь знакъ Самарьскъ (1780)
 </gallery>
+{{commonscat|Samara}}
 [[Category:Гради]]
 [[Катигорї:Рѡсї]]
 [[Category:Прѣзъсибирьскъ колѣинъ пѫть]]
