--- a/Чєлѣбиньскъ.mw
+++ b/Чєлѣбиньскъ.mw
@@ -12,7 +12,7 @@
 <gallery>
 Image:Coat of Arms of Chelyabinsk (1994).png|Челѣбиньска древльн҄ь знакъ
 </gallery>
-
+{{commonscat|Chelyabinsk}}
 [[Катигорї:Гради]]
 [[Катигорї:Рѡсї]]
 [[Category:Прѣзъсибирьскъ колѣинъ пѫть]]
