--- a/Оуфа.mw
+++ b/Оуфа.mw
@@ -9,7 +9,7 @@
 |}}
 '''Ѹфа''' ([[Рѹсьскъ ѩзыкъ|рѹсьскы]] ''Уфа'', [[башкортьскъ ѩзыкъ|башкортьскы]] ''Өфө'') градъ [[Рѡсї|Рѡсїѩ]], [[Башкортостанъ|Башкортостанѹ]] димократїѩ главьнъ градъ ѥстъ. Людии обитаѥтъ 1029 тысѫщь. Основанъ лѣта 1574, нареченъ градъ съ лѣта 1586 ѥстъ. Ѹфа построѥна сълинии рѣкъ [[Бѣла (рѣка)|Бѣлыѩ]], [[Диома (рѣка)|Диомы]], и [[Ѹфа (рѣка)|Ѹфы]] ѥстъ. Построѥнъ [[Прѣзъсибирьскъ колѣинъ пѫть|Прѣзъсибирьсцѣ колѣинѣ пѫти]] ѥстъ.
 
-
+{{commonscat|Ufa}}
 [[Катигорї:Гради]]
 [[Катигорї:Рѡсї]]
 [[Category:Прѣзъсибирьскъ колѣинъ пѫть]]
