/* Зьри такожде */ образьць "коммонс"

--- a/Роусьскъ_ѩꙁꙑкъ.mw
+++ b/Роусьскъ_ѩꙁꙑкъ.mw
@@ -7,7 +7,7 @@
 
 == Зьри такожде ==
 {{InterWiki|ru|Заглавная страница||рѹсьскыимь}}
-
+{{commonscat|Russian language}}
 
 [[Category:Словѣньсци ѩзыци]]
 [[Category:Рѡсї]]
