--- a/Словѣньсци_ѩꙁꙑци.mw
+++ b/Словѣньсци_ѩꙁꙑци.mw
@@ -37,6 +37,9 @@
 А с҄и же сѫтъ мрьтви южьни словѣньсци ѩзыци:
 * [[словѣньскъ ѩзыкъ|словѣньскъ]] - от ѥго црькъвьнословѣньскъ ѩзъкъ ѥстъ 
 * [[Црькъвьнословѣньскъ ѩзыкъ|црькъвьнословѣньскъ]]
+
+== Зьри такожде ==
+{{commonscat|Slavic languages}}
 [[Category:Словѣньсци ѩзыци|*]]
 [[ru:Славянские языки]]
 [[af:Slawiese tale]]
