--- a/Блъгарьскъ_ѩꙁꙑкъ.mw
+++ b/Блъгарьскъ_ѩꙁꙑкъ.mw
@@ -7,6 +7,7 @@
 
 == Зьри такожде ==
 {{InterWiki|bg|Начална страница||блъгарьскыимь}}
+{{commonscat|Bulgarian languge}}
 [[Катигорї:Блъгарї]]
 [[Катигорї:Словѣньсци ѩзыци]]
 
