--- a/Їллѷрїискословѣньскъ_ѩꙁꙑкъ.mw
+++ b/Їллѷрїискословѣньскъ_ѩꙁꙑкъ.mw
@@ -55,6 +55,7 @@
 
 == Зьри такожде ==
 {{InterWiki|sl|Glavna_stran||їллѷрїиско-словѣньскыимь}}
+{{commonscat|Slovenian language}}
 * [http://www.ijs.si/slo-chset.html-l2 Slovene alphabet]
 * [http://euro.typo.cz/ Typo.cz Information on Central European typography and typesetting]
 
