--- a/Макєдоньскъ_ѩꙁꙑкъ.mw
+++ b/Макєдоньскъ_ѩꙁꙑкъ.mw
@@ -7,7 +7,7 @@
 
 == Зьри такожде ==
 {{InterWiki|mk|Главна страница||македоньскыимь}}
-
+{{commonscat|Macedonian language}}
 [[Category:Словѣньсци ѩзыци]]
 [[Category:Македонї]]
 
