--- a/Пол҄ьскъ_ѩꙁꙑкъ.mw
+++ b/Пол҄ьскъ_ѩꙁꙑкъ.mw
@@ -9,7 +9,7 @@ Aa Ąą Bb Cc Ćć Dd Ee Ęę Ff Gg Hh Ii Jj Kk Ll Łł Mm Nn Ńń Oo Óó Pp (Q
 
 == Зьри такожде ==
 {{InterWiki|pl|Strona główna||пол҄ьскыимь}}
-
+{{commonscat|Polish language}}
 [[Category:Словѣньсци ѩзыци]]
 [[Category:Пол̑ьска]]
 
