--- a/Срьбьскъ_ѩꙁꙑкъ.mw
+++ b/Срьбьскъ_ѩꙁꙑкъ.mw
@@ -9,6 +9,7 @@
 
 == Зьри такожде ==
 {{InterWiki|sr|Главна страна||cрьбьскыимь}}
+{{commonscat|Serbian language}}
 * [[Влькъ Стефановищь Караджищь]]
 
 [[Category:Словѣньсци ѩзыци]]
