/* Зьри такожде */ образьць "коммонс"

--- a/Хръватьскъ_ѩꙁꙑкъ.mw
+++ b/Хръватьскъ_ѩꙁꙑкъ.mw
@@ -43,7 +43,7 @@
 Звѫци /ш/, /ж/, /ч/ и /дж/ сѫтъ тврьди.
 == Зьри такожде ==
 {{InterWiki|hr|Glavna stranica||хръватьскыимь}}
-
+{{commonscat|Croatian language}}
 [[Катигорї:Хръватьска]]
 [[Category:Словѣньсци ѩзыци]]
 
