--- a/Чєшьскъ_ѩꙁꙑкъ.mw
+++ b/Чєшьскъ_ѩꙁꙑкъ.mw
@@ -6,6 +6,7 @@
 Aa Áá Bb Cc Čč Dd Ďď Ee Éé Ěě Ff Gg Hh CHChch Ii Íí Jj Kk Ll Mm Nn Ňň Oo Óó Pp Rr Řř Ss Šš Tt Ťť Uu Úú Ůů Vv Yy Ýý Zz Žž</div>
 == Зьри такожде ==
 {{InterWiki|cs|Hlavní strana||чешьскыимь}}
+{{commonscat|Czech language}}
 [[Category:Словѣньсци ѩзыци]]
 
 [[af:Tsjeggies]]
