/* Зьри такожде */ образьць "коммонс"

--- a/Оукраиньскъ_ѩꙁꙑкъ.mw
+++ b/Оукраиньскъ_ѩꙁꙑкъ.mw
@@ -40,6 +40,7 @@
 
 == Зьри такожде ==
 {{InterWiki|uk|Головна стаття||ѹкраиньскыимь}}
+{{commonscat|Ukrainian language}}
 [[Category:Словѣньсци ѩзыци]]
 [[Category:Ѹкраина]]
 
