--- a/Блъгарїꙗ.mw
+++ b/Блъгарїꙗ.mw
@@ -14,7 +14,7 @@
 1878 годѣ Блъгарї стала ѥстъ пакы самостотел҄ьна дрьжава.
 
 == Зьри такожде ==
-
+{{commonscat|Bulgaria}}
 *[[Блъгаре]]
 *[[Македонї]]
 
