*Empty MediaWiki Message*

--- a/Кѷпръ.mw
+++ b/Кѷпръ.mw
@@ -2,18 +2,18 @@
 | знамѧ= [[Видъ:Flag_of_Cyprus.svg|150px]]
 | знакъ = [[image:Cyprus Coat of Arms.png|80px]]
 | map = LocationCyprus.svg
-| Стольнъ градъ = 
-| Ѩзыкъ = 
+| Стольнъ градъ = [[Леѵкѡсї]] 
+| Ѩзыкъ = [[грьчьскъ ѩзыкъ|грьчьскъ]], [[Тѹрчьскъ ѩзыкъ|Тѹрчьскъ]]
 | Глава = 
 | area =
-| Людии =  
-| Почѧта = 
+| Людии =  771 тысѫщѧ
+| Почѧта = 1960
 }}
-'''Кѷпръ''' ѥстъ островъ и дрьжава.
-
+'''Кѷпръ''' ({{lang-el|Κύπρος}}, {{lang-tr|Kıbrıs}})  ѥстъ островъ и дрьжава. [[Тѹрчьскъ ѩзыкъ|Тѹрчьскъ]] и грьчьскъ ѩзыци дрьжавны ѥсте. Стольнъ градъ [[Леѵкѡсї]] ѥстъ. Дрьжавнъ Людии обитаѥтъ 771 тысѫщѧ.
+{{commonscat|Cyprus}}
 [[Category:Страны]]
 
-[[af:Ciprus]]
+[[af:Ciprus]] 
 [[an:Chipre]]
 [[ar:قبرص]]
 [[arc:ܩܘܦܪܘܣ]]
