*Empty MediaWiki Message*

--- a/Кѷпръ.mw
+++ b/Кѷпръ.mw
@@ -9,7 +9,7 @@
 | Людии =  771 тысѫщѧ
 | Почѧта = 1960
 }}
-'''Кѷпръ''' ({{lang-el|Κύπρος}}, {{lang-tr|Kıbrıs}})  ѥстъ островъ и дрьжава. [[Тѹрчьскъ ѩзыкъ|Тѹрчьскъ]] и грьчьскъ ѩзыци дрьжавны ѥсте. Стольнъ градъ [[Леѵкѡсї]] ѥстъ. Дрьжавнъ Людии обитаѥтъ 771 тысѫщѧ.
+'''Кѷпръ''' ({{lang-el|Κύπρος}}, {{lang-tr|Kıbrıs}})  ѥстъ островъ и дрьжава. [[Тѹрчьскъ ѩзыкъ|Тѹрчьскъ]] и грьчьскъ ѩзыци дрьжавны ѥсте. Стольнъ градъ [[Леѵкѡсї]] ѥстъ. Людии обитаѥтъ 771 тысѫщѧ.
 {{commonscat|Cyprus}}
 [[Category:Страны]]
 
