robot  Modifying: [[la:Sexantaprista]]

--- a/Роусє.mw
+++ b/Роусє.mw
@@ -14,7 +14,7 @@
 [[fr:Roussé]]
 [[id:Ruse]]
 [[it:Ruse (Bulgaria)]]
-[[la:Sexaginta Prista]]
+[[la:Sexantaprista]]
 [[lv:Ruse]]
 [[mk:Русе]]
 [[nl:Roese (stad)]]
