--- a/Парижь.mw
+++ b/Парижь.mw
@@ -16,7 +16,7 @@ Image:Eiffelturm1.jpg|Ефела стлъпъ
 Image:Paris-notre-dame-facade.jpg|Парижьскы Божиѩ Матере съборьна црькы
 Image:Moulin rouge.jpg|Ѳеатро «Мѹленъ Рѹжъ»
 </gallery>
-
+{{commonscat|Paris}}
 [[Category:Гради]]
 [[Category:Стольни гради]]
 [[Category:Франкї]]
