--- a/Франкїꙗ.mw
+++ b/Франкїꙗ.mw
@@ -10,10 +10,8 @@
 | Почѧта = 
 }}
 '''Франкї''' ([[Франкїискъ ѩзыкъ|франкїискы]] ''France'') [[Западьна Еѵрѡпа|Западьны Еѵрѡпы]] дрьжава ѥстъ. Стольнъ градъ Франкїѩ [[Парижь]] ѥстъ, людии обитаѥтъ 60 леѡдръ. Дрьжавьнъ ѩзыкъ Франкїѩ франкїискъ ѥстъ.
-<gallery>
-Image:|Франкїѩ знамѧ
-Image:|Франкїѩ знакъ
-</gallery>
+
+{{commonscat|France}}
 [[Катигорї:Франкї]]
 
 [[af:Frankryk]]
