/* Зьри такожде */ образьць "коммонс"

--- a/Франкїискъ_ѩꙁꙑкъ.mw
+++ b/Франкїискъ_ѩꙁꙑкъ.mw
@@ -1,6 +1,7 @@
 [[Видъ:Map-Francophone World.png|thumb|Франкїискъ ѩзыкъ свѣтьнѣ хартѣ]]'''Франкїискъ ѩзыкъ''' (франкїискы ''le français, la langue française'') франкїиць ѩзыкъ ѥстъ. [[Франкї|Франкїѩ]] дрьжавьнъ ѩзыкъ ѥстъ, франкїискоѩзычьнъ народъ [[Белгїѥ|Белгї]], [[Свицера|Свицеры]], [[Канада|Канады]], иде сѧ ѥдинъ из епїсимьнъ ѩзыкъ влѥтъ. Франкїискыи ѩзыкъ мъногъ дрьжав [[Афрїка|Афрїкы]], [[Карибьско морѥ|Карибьска мор]] ([[Аити]] ит҃д) , [[Франкїиска Гвина|Франкїискы Гвины]] народи имѫтъ, срѣди иного ко [[епїсимьнъ ѩзыкъ]]. Франкїискыи ѩзыкъ сѧ [[їндоеѵрѡпьсци ѩзыци|їндоеѵрѡпьскы]] сѣмиѩ [[романьсци ѩзыци|романьскы]] омады   ѩзыкъ влѥтъ. Ѥго письмо [[латиньско письмо|латиньско]] ѥстъ. Ѥдинъ и шести епїсимьнъ и дѣльнъ ѩзыкъ [[Ѥдьнѥнъ народъ съвѣтъ|ѤНС]] ѥстъ. Число глаголател҄ь франкїискы около 130 леѡдръ чловѣкъ сѫтъ (по вѣстьмъ [[2000 годъ|2000 года]]). Франкїискыи ѩзыкъ велика числа междѹнародьнъ органѡсъ епїсимьнъ ѩзыкъ ѥстъ и въторыи ѩзыкъ свѣта, иже навыка народолюбиѥ иметъ ко щѹждь ѩзыкъ.
 == Зьри такожде ==
 {{InterWiki|fr|Accueil||франкїискыимь}}
+{{commonscat|French language}}
 [[Катигорї:Ѩзыци]]
 [[Category:Франкї]]
 
