--- a/Латиньскъ_ѩꙁꙑкъ.mw
+++ b/Латиньскъ_ѩꙁꙑкъ.mw
@@ -6,7 +6,7 @@
 
 ==Зьри тако же==
 {{InterWiki|la|Pagina prima||латиньскыимь}}
-
+{{commonscat|Latin language}}
 * [[Латиньска азъбѹкы]]
 
 [[Category:Ѩзыци]]
