--- a/Аравьскъ_ѩꙁꙑкъ.mw
+++ b/Аравьскъ_ѩꙁꙑкъ.mw
@@ -5,7 +5,7 @@
 {{unicode|ʼ b ǧ d h w z ḥ ṭ y k l m n s ʻ f ṣ q r š t ṯ ḫ ḏ ḍ ẓ ġ}}
 == Зьри такожде ==
 {{InterWiki|ar|الصفحة الرئيسية||аравьскыимь}}
-
+{{commonscat|Arabic language}}
 [[Category:Симїтьчьскы ѩзыци]]
 
 [[af:Arabies]]
