--- a/Латиньска_аꙁъбоукꙑ.mw
+++ b/Латиньска_аꙁъбоукꙑ.mw
@@ -4,6 +4,9 @@
 
 Нынѣ имаєтъ 20 бѹкъвъ и 6 иже сѫтъ A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, Q, R, S, T, U, V, W, X, Y, Z.
 
+== Зьри такожде ==
+
+{{commonscat|Latin alphabet}}
 [[Category:Ѩзыци]]
 [[Category:Грамота]]
 
