--- a/Англїискъ_ѩꙁꙑкъ.mw
+++ b/Англїискъ_ѩꙁꙑкъ.mw
@@ -3,6 +3,7 @@
 
 == Зьри такожде ==
 {{InterWiki|en|Main Page||Англїискыимь}}
+{{commonscat|English language}}
 [[Катигорї:Ѩзыци]]
 
 [[af:Engels (taal)]]
