--- a/Нѣмьчьскъ_ѩꙁꙑкъ.mw
+++ b/Нѣмьчьскъ_ѩꙁꙑкъ.mw
@@ -8,7 +8,7 @@ Aa (Ää) Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo (Öö) Pp Qq Rr Ss (ß) Tt U
 
 == Зьри такожде ==
 {{InterWiki|de|Hauptseite||Нѣмьчьскыимь}}
-
+{{commonscat|German language}}
 [[Катигорї:Ѩзыци]]
 
 [[af:Duits]]
