*Empty MediaWiki Message*

--- a/Прьваꙗ_дѷнастиꙗ_Єгѷпьта.mw
+++ b/Прьваꙗ_дѷнастиꙗ_Єгѷпьта.mw
@@ -1,1 +1,1 @@
-'''Прьва дѷнасти [[Егѷпьтъ|Егѷпьта]]''' [[Фараѡнъ|фараѡни]] бѣ ции владычьствоваахѫ отъ лѣта 3035 прѣдъ р҃х до лѣта 2890 прѣдъ р҃х. Сии фараѡни [[Хоръ-Аха|Хоръ-Аха]] и [[Дъжеръ|Дъжеръ]] и [[Денъ|Денъ]] и прочии сѫтъ. Брьньни гроби ихъ обрѣщени бышѧ древл҄ьн҄ихъ градѣхъ [[Абѷдосъ|Абѷдосѣ]] и [[Саккара|Саккарѣ]] отъ [[Франкї|франкїиська]] [[Археологи|археолога]] [[Флиндерсъ Петри|Флиндерса Петри]] сътолѣти 19.
+'''Прьва дѷнасти [[Егѷпьтъ|Егѷпьта]]''' [[Фараѡнъ|фараѡни]] бѣ ции владычьствоваахѫ отъ лѣта 3035 прѣдъ р҃х до лѣта 2890 прѣдъ р҃х. Сии фараѡни [[Хоръ-Аха|Хоръ-Аха]] и [[Дъжеръ|Дъжеръ]] и [[Денъ|Денъ]] и прочии сѫтъ. Брьньни гроби ихъ обрѣщени бышѧ древл҄ьн҄ихъ градѣхъ [[Абѷдъ|Абѷдѣ]] и [[Саккара|Саккарѣ]] отъ [[Велика Британї|англїиська]] [[Археологи|археолога]] [[Флиндерсъ Петри|Флиндерса Петри]] сътолѣти 19.
