--- a/Авѷдъ.mw
+++ b/Авѷдъ.mw
@@ -1,1 +1,2 @@
 '''Абѷдъ''' древл҄ьн [[Егѷптъ|Егѷпта]] градъ бѣ, иде [[Осїрь|Осїровъ]] гробъ бѣ, ко пьсано ѥстъ Егѷптьстѣхъ [[мѷѳъ|мѷѳѣхъ]].
+[[ru:Абидос]]
