robot  Adding: [[gd:Skopje]], [[oc:Skopje]]

--- a/Съкопиѥ.mw
+++ b/Съкопиѥ.mw
@@ -34,6 +34,7 @@
 [[fo:Skopje]]
 [[fr:Skopje]]
 [[fy:Skopje]]
+[[gd:Skopje]]
 [[gl:Skopje]]
 [[he:סקופיה]]
 [[hr:Skoplje]]
@@ -56,6 +57,7 @@
 [[nl:Skopje]]
 [[no:Skopje]]
 [[nov:Skopje]]
+[[oc:Skopje]]
 [[pl:Skopje]]
 [[pms:Skopje]]
 [[pt:Skopje]]
