*Empty MediaWiki Message*

--- a/Авѷдъ.mw
+++ b/Авѷдъ.mw
@@ -1,2 +1,3 @@
 '''Абѷдъ''' древл҄ьн [[Егѷптъ|Егѷпта]] градъ бѣ, иде [[Осїрь|Осїровъ]] гробъ бѣ, ко пьсано ѥстъ Егѷптьстѣхъ [[мѷѳъ|мѷѳѣхъ]].
+[[Category:Древл҄ьн҄ь Егѷптъ]]
 [[ru:Абидос]]
