*Empty MediaWiki Message*

--- a/Єѳїопїꙗ.mw
+++ b/Єѳїопїꙗ.mw
@@ -2,16 +2,17 @@
 | знамѧ= [[Видъ:Flag_of_Ethiopia.svg|150px]]
 | знакъ = [[image:Ethiopia COA.svg|80px]]
 | map = LocationEthiopia.png 
-| Стол҄ьнъ градъ = [[Адїсъ-Абеба]]  
+| Стольнъ градъ = [[Адїсъ-Абеба]]  
 | Ѩзыкъ = [[Амхарьскъ ѩзыкъ|амхарьскъ]] 
 | Глава = 
 | area =
-| Людии =  
+| Людии =  75 067 000
 | Почѧта = 
 }}
-'''Еѳїопї''' Афрїкы и дрьжава ѥстъ. Дрьжавьнъ ѩзыкъ [[Амхарьскъ ѩзыкъ|амхарьскъ]] ѥстъ. Стольнъ градъ [[Адїсъ-Абеба]] ѥстъ.
+'''Еѳїопї''' ([[Амхарьскъ ѩзыкъ|амхарьскы]] :''ኢትዮጵያ'') Афрїкы и дрьжава ѥстъ. Дрьжавьнъ ѩзыкъ [[Амхарьскъ ѩзыкъ|амхарьскъ]] ѥстъ. Стольнъ градъ [[Адїсъ-Абеба]] ѥстъ.
+Еѳїопїи людии 75 леѡдръ обитаѥтъ.
 
-
+{{commonscat|Ethiopia}}
 [[Category:Еѳїопї|*]]
 
 [[af:Ethiopië]]
