*Empty MediaWiki Message*

--- a/Афрїка.mw
+++ b/Афрїка.mw
@@ -1,6 +1,6 @@
 [[Видъ:LocationAfrica.png|right|thumb|200px|Афрїка свѣтьнѣ хартѣ]]
 '''Афрїка''' свѣта чѧсть ѥстъ.
-== Афрїки дрьжавы ==
+== Афрїкы дрьжавы ==
 * [[Егѷптъ]]
 * [[Ерѷѳрї]]
 * [[Еѳїопї]]
