*Empty MediaWiki Message*

--- a/Єрѷѳрїꙗ.mw
+++ b/Єрѷѳрїꙗ.mw
@@ -2,16 +2,16 @@
 | знамѧ= [[Видъ:Flag_of_Eritrea.svg|150px]]
 | знакъ = [[image:Eritrea coa.png|80px]]
 | map = LocationEritrea.svg 
-| Стол҄ьнъ градъ = [[Асмера]]
+| Стольнъ градъ = [[Асмера]]
 | Ѩзыкъ = [[Аравьскъ ѩзыкъ|аравьскъ]], [[тїгрїньскъ ѩзыкъ|тїгрїньскъ]] 
 | Глава = 
 | area =
 | Людии = 4300 тысѧщь
 | Почѧта = 
 }}
-'''Ерѷѳрї''' [[Афрїка|Афрїкы]] дрьжава ѥстъ. Дрьжавьни ѩзыци [[тїгрїньскъ ѩзыкъ|тїгрїньскъ]] и [[Аравьскъ ѩзыкъ|аравьскъ]] ѥсте. Стольнъ градъ [[Асмера]] ѥстъ. Людии обитаѥтъ 4300 тысѧщь. 
+'''Ерѷѳрї''' ([[тїгрїньскъ ѩзыкъ|тїгрїньскы]]: ''ሃገረ ኤርትራ'', ) [[Афрїка|Афрїкы]] дрьжава ѥстъ. Дрьжавьни ѩзыци [[тїгрїньскъ ѩзыкъ|тїгрїньскъ]] и [[Аравьскъ ѩзыкъ|аравьскъ]] ѥсте. Стольнъ градъ [[Асмера]] ѥстъ. Людии обитаѥтъ 4300 тысѧщь. 
 
-
+{{commonscat|Eritrea}}
 [[Category:Ерѷѳрї|*]]
 
 [[af:Eritrea]]
