--- a/Папєжь_Алєѯандръ_Ѕ҃.mw
+++ b/Папєжь_Алєѯандръ_Ѕ҃.mw
@@ -1,7 +1,10 @@
-[[Видъ:Alexander VI - Pinturicchio detail.jpg|thumb|200 px|Папежь Алеѯандръ Ѕ]]
+[[Видъ:Alexander VI - Pinturicchio detail.jpg|thumb|150 px|Папежь Алеѯандръ Ѕ]]
 '''Алеѯандръ Ѕ''' [[папежь]] бѣ (лѣта 1492 аѵгѹста 11 числа — лѣта 1503 аѵгѹста 18 числа).
 Алеѯандръ Ѕ ([[Родриго Ленцѹоли]], Алеѯандръ Ѕ [[Борджи]]) рожденъ [[Валенсї|Валенсїи]] ѥстъ лѣта 1431 и папежа нетии [[Папежь Калиѯъ Г|Калиѯа Г]] бѣ. Зъванъ стрыѥмь своимъ приде въ [[Римъ]] лѣта 1455 идеже приѩлъ [[кардиналъ|кардинальскъ]] санъ ѥстъ. И жилъ въ блѫдѣ съ патрик҄ѥѭ [[Роза Ваноца|Розоѭ Ваноцеѭ]] бѣ же роди ѥмѹ четыри сыны ([[Чезаре Борджи|Чезара]] и [[Гифри Борджи|Гифри]] да ина дъва) да дъщь [[Лѹкреци Борджи|Лѹкрециѭ]]. Лѣта 1492 аѵгѹста 11 числа съ застѫпомь кардинала [[Кардиналъ Сфорца|Сфорца]] и [[Кардиналъ Чибо|Чибо]] приѩлъ санъ папежа и сѧ Алеѯандръ Ѕ Борджи санъ. И жилъ Алеѯандръ въ блѫдѣ мрьзъкомь съ дъчериѭ своѥѭ Лѹкрециѥѭ бѣ. Дъва коньчьна лѣта сво ѹмножилъ Алеѯандръ кѹпъ [[Индѹлгенци|индѹлгенцими]] и саны и капами кардинальсками бо истъщи сѧ [[Ватиканъ|Ватиканьска]] скотьница о бещисльнь рать [[Италї|Италиискъ]] и отъ ѥго велика блѫда.
 Сѧ лѣта 1503 аѵгѹста 18 числа отравихъ.
+
+== Зьри такожде ==
+{{commonscat|Alexander VI}}
 [[Category:Людиѥ|А]]
 
 [[ang:Alexander VI Pāpa]]
