/* Еѵрѡпы бол҄ьшѧ дрьжавы */

--- a/Єѵрѡпа.mw
+++ b/Єѵрѡпа.mw
@@ -21,6 +21,8 @@
 * [[Италї]]
 * [[Велика Британї]]
 
+== Зьри такожде ==
+{{commonscat|Europe}}
 [[Катигорї:Свѣта чѧсти]]
 [[Катигорї:Еѵрѡпа| ]]
 
