*Empty MediaWiki Message*

--- a/Кꙑѥвъ.mw
+++ b/Кꙑѥвъ.mw
@@ -1,7 +1,7 @@
 {{Градъ|Имѧ = Кыѥвъ
 | знамѧ= Kyiv flag.png
 | знакъ = Kiew-city-COA.PNG
-| Дрьжава = Ѹкраина
+| Дрьжава = {{Ѹкраины знамѧ}}Ѹкраина
 | Глава = 
 | Людии = 
 | Основанъ = 
