--- a/Парижь.mw
+++ b/Парижь.mw
@@ -1,7 +1,7 @@
 {{Градъ|Имѧ = Парижь
 | знамѧ= Flag of Paris.svg
 | знакъ = Blason paris.png
-| Дрьжава = Франкї
+| Дрьжава = {{Франкїѩ знамѧ}}Франкї
 | Глава = 
 | Людии = 2200 тысѫщь
 | Основанъ = 
