/* Еѵрѡпы бол҄ьшѧ дрьжавы */

--- a/Єѵрѡпа.mw
+++ b/Єѵрѡпа.mw
@@ -10,10 +10,10 @@
 * [[Южьна Еѵрѡпа]]
 
 == Еѵрѡпы бол҄ьшѧ дрьжавы ==
-* [[Рѡсї]] ([[Асї|Асїи]] тако же)
-* [[Ѹкраина]]
-* [[Франкї]]
-* [[Їспанї]]
+* {{Рѡсїѩ знамѧ}}[[Рѡсї]] ([[Асї|Асїи]] тако же)
+* {{Ѹкраины знамѧ}}[[Ѹкраина]]
+* {{Франкїѩ знамѧ}}[[Франкї]]
+* {{Їспанїѩ знамѧ}}[[Їспанї]]
 * [[Свеньско]]
 * [[Нѣмьци]]
 * [[Сѹмь]]
