/* Еѵрѡпы бол҄ьшѧ дрьжавы */

--- a/Єѵрѡпа.mw
+++ b/Єѵрѡпа.mw
@@ -14,8 +14,8 @@
 * {{Ѹкраины знамѧ}}[[Ѹкраина]]
 * {{Франкїѩ знамѧ}}[[Франкї]]
 * {{Їспанїѩ знамѧ}}[[Їспанї]]
-* [[Свеньско]]
-* [[Нѣмьци]]
+* {{Свеньска знамѧ}}[[Свеньско]]
+* {{Нѣмьць знамѧ}}[[Нѣмьци]]
 * [[Сѹмь]]
 * [[Норегъ]]
 * [[Италї]]
