--- a/Соумь.mw
+++ b/Соумь.mw
@@ -11,6 +11,7 @@
 }}
 '''Сѹмь''' ([[cѹмьскъ ѩзыкъ|сѹмьскы]] ''Suomi'') [[Еѵрѡпа|Еѵрѡпы]] сѣвера дрьжава ѥстъ. Сѹми людии 5 219 732 обитаѥтъ. Дръжавьни ѩзыци Сѹми [[Свеньскъ ѩзыкъ|ѩзыкъ свеньскъ]] и   [[Сѹмьскъ ѩзыкъ|ѩзыкъ сѹмьскъ]] ѥсте.
 
+{{commonscat|Finland}}
 [[Category:Страны]]
 
 [[af:Finland]]
