*Empty MediaWiki Message*

--- a/Википєдїꙗ.mw
+++ b/Википєдїꙗ.mw
@@ -1,9 +1,8 @@
-'''Википедї''' ([[англїискъ ѩзыкъ|англїискы]] ''Wikipedia'') ѥстъ мъногоѩзычьна енкѷклопедї ѭже къжьдо можетъ измѣнти.
+[[Видъ:WikiSlavNova2-4.png|thumb]]
+'''Википедї''' ({{Lang-en|Wikipedia}}) ѥстъ мъногоѩзычьна енкѷклопедї ѭже къжьдо можетъ измѣнти, почѧта ѥстъ лѣтѣ 2001. Википедї пьсана словѣньскыимь ѩзыкомь начѧта ѥстъ їѹнї, 2006 года.
 
-<gallery>
-Видъ:WikiSlavNova2-4.png
-</gallery>
 
+{{commonscat|Wikipedia}}
 [[Category:Википедї]]
 
 [[af:Wikipedia]]
