--- a/Брѣстѣнꙑѩ_грамотꙑ.mw
+++ b/Брѣстѣнꙑѩ_грамотꙑ.mw
@@ -3,6 +3,8 @@
 
 Ѩже Новѣ Градѣ влѥны сѫтъ, пьсаны [[Древл҄ьнѥновоградьскъ ѩзыкъ|говоромь древл҄ьнѥновоградьскомь]] сѫтъ, въпрѣкы томѹ мъногы и [[ѩзыкъ древл҄ьн҄ь рѹсьскъ|древл҄ьнѥмь рѹсьскомь]], ко по вьсеи [[Рѹсь|Рѹси]].
 
+== Зьри такожде ==
+{{commonscat|Birch bark documents}}
 [[Category:Кыѥвьска Рѹсь]]
 [[Category:Новъ Градъ]]
 [[Category:Грамота]]
