*Empty MediaWiki Message*

--- a/Южьна_Амєрїка.mw
+++ b/Южьна_Амєрїка.mw
@@ -1,6 +1,7 @@
 [[Видъ:LocationSouthAmerica.png|right|thumb|200px|Южьна Амерїка свѣтьнѣ хартѣ]]
 '''Южьна Амерїка''' свѣта чѧсть ѥстъ.
 
+{{commonscat|South America}}
 [[Category:Свѣта чѧсти]]
 
 [[af:Suid-Amerika]]
