/* Еѵрѡпы бол҄ьшѧ дрьжавы */

--- a/Єѵрѡпа.mw
+++ b/Єѵрѡпа.mw
@@ -18,8 +18,8 @@
 * {{Нѣмьць знамѧ}}[[Нѣмьци]]
 * [[Сѹмь]]
 * [[Норегъ]]
-* [[Италї]]
-* [[Велика Британї]]
+* {{Италїѩ знамѧ}}[[Италї]]
+* {{Великы Британїѩ знамѧ}}[[Велика Британї]]
 
 == Зьри такожде ==
 {{commonscat|Europe}}
