--- a/Асїꙗ.mw
+++ b/Асїꙗ.mw
@@ -1,6 +1,9 @@
 [[Видъ:LocationAsia.png|right|thumb|200px|Асї свѣтьнѣ хартѣ]]
 '''Асї''' свѣта чѧсть ѥстъ. Людии 3981 леѡдръ обитаѥтъ. Бол҄ьши дрьжава [[Рѡсї]] ѥстъ. 
 
+== Зьри такожде ==
+{{commonscat|Asia}}
+{{Свѣта чѧсти}}
 [[Катигорї:Свѣта чѧсти]]
 
 [[af:Asië]]
