*Empty MediaWiki Message*

--- a/Сѣвєрьна_Амєрїка.mw
+++ b/Сѣвєрьна_Амєрїка.mw
@@ -1,6 +1,10 @@
 [[Видъ:LocationNorthAmerica.png|right|thumb|200px|Сѣверьна Амерїка свѣтьнѣ хартѣ]]
 '''Сѣверьна Амерїка''' свѣта чѧсть ѥстъ. Бол҄ьши дрьжава [[Канада]] ѥстъ. 
 
+== Зьри такожде ==
+
+{{commonscat|North America}}
+{{Свѣта чѧсти}}
 [[Category:Свѣта чѧсти]]
 
 [[af:Noord-Amerika]]
