--- a/Южьна_Амєрїка.mw
+++ b/Южьна_Амєрїка.mw
@@ -1,7 +1,9 @@
 [[Видъ:LocationSouthAmerica.png|right|thumb|200px|Южьна Амерїка свѣтьнѣ хартѣ]]
 '''Южьна Амерїка''' свѣта чѧсть ѥстъ.
 
+== Зьри такожде ==
 {{commonscat|South America}}
+{{Свѣта чѧсти}}
 [[Category:Свѣта чѧсти]]
 
 [[af:Suid-Amerika]]
