--- a/Аѵстралїꙗ_и_Ѡкєанїꙗ.mw
+++ b/Аѵстралїꙗ_и_Ѡкєанїꙗ.mw
@@ -1,3 +1,5 @@
+[[Видъ:LocationOceania.png|thumb|Аѵстралї и Ѡкеанї свѣтьнѣ хартѣ]]
 '''Аѵстралї и Ѡкеанї''' свѣта чѧсть ѥстъ.
 
+{{Свѣта чѧсти}}
 [[Category:Свѣта чѧсти]]
