*Empty MediaWiki Message*

--- a/Антарктїка.mw
+++ b/Антарктїка.mw
@@ -1,6 +1,6 @@
 [[Видъ:LocationAntarctica.png|right|thumb|200px|Антарктїка свѣтьнѣ хартѣ]]
 '''Антарктїка''' свѣта чѧсть ѥстъ.
 
+{{Свѣта чѧсти}}
 [[Category:Свѣта чѧсти]]
-[[en:Antarctica]]
 [[ru:Антарктика]]
