*Empty MediaWiki Message*

--- a/Аꙁѣрбаичанъ.mw
+++ b/Аꙁѣрбаичанъ.mw
@@ -2,7 +2,7 @@
 | знамѧ= [[Видъ:Flag_of_Azerbaijan.svg|150px]]
 | знакъ = [[image:Azerbaijan coa.png|80px]]
 | map = Aj-map.png 
-| Стол҄ьнъ градъ = [[Бакѹ]]
+| Стольнъ градъ = [[Бакѹ]]
 | Ѩзыкъ = [[азѣрбаичаньскъ ѩзыкъ|азѣрбаичаньскъ]] 
 | Глава = 
 | area =
