*Empty MediaWiki Message*

--- a/Їꙁдраил҄ь.mw
+++ b/Їꙁдраил҄ь.mw
@@ -2,16 +2,18 @@
 | знамѧ= [[Видъ:Flag_of_Israel.svg|150px]]
 | знакъ = [[image:COA of Israel.svg|80px]]
 | map = LocationIsrael.svg 
-| Стол҄ьнъ градъ = [[Їерѹсалимъ]]
-| Ѩзыкъ = [[евреискъ ѩзыкъ|евреискы]]
+| Стольнъ градъ = [[Їерѹсалимъ]]
+| Ѩзыкъ = [[евреискъ ѩзыкъ|евреискъ]]
 | Глава = 
 | area =
-| Людии = 
+| Людии = 7 172 400
 | Почѧта = 1948
 }}
 
-'''Їздраил̑ь''' ([[евреискъ ѩзыкъ|евреискы]] ישראל, [[аравьскъ ѩзыкъ|аравьскы]] إسرائيل) ѥстъ дрьжава западьнѣи [[Асї|Асїи]]. Стольнъ градъ Їздраилѩ [[Їерѹсалимъ]] ѥсть. Въ лето [[1948]] Їздраиль сталъ ѥсть пакы самостоѩтельна дрьжава.
+'''Їздраил̑ь''' ([[евреискъ ѩзыкъ|евреискы]] ישראל, {{lang-ar|إسرائيل}}) ѥстъ дрьжава западьнѣи [[Асї|Асїи]]. Дрьжавьна ѩзыка [[евреискъ ѩзыкъ|евреискъ]] и [[аравьскъ ѩзыкъ|аравьскъ]] ѥсте. Стольнъ градъ Їздраилѩ [[Їерѹсалимъ]] ѥсть. Людии 7 леѡдръ обитаѥтъ.
+Въ лето [[1948]] Їздраиль сталъ ѥсть пакы самостоѩтельна дрьжава.
 
+{{commonscat|Israel}}
 [[Катигорї:Їздраил̑ь]]
 
 [[af:Israel]]
