*Empty MediaWiki Message*

--- a/Срѣдинꙗнє.mw
+++ b/Срѣдинꙗнє.mw
@@ -11,7 +11,7 @@
 }}
 '''Срѣдинне''' ([[срѣдиньскъ ѩзыкъ|срѣдиньскы]] 中国 [джѹнгво], словѣньско Срѣдиньска дрьжава срѣдиньскаѥго словесе прѣложениѥ ѥстъ. дрѹгъ сеѩ дрьжавы имѧ Джѹнне сътворѥно о срѣдиньска словесе ѥстъ). Епїсимьно имѧ '''Срѣдиньска Народьна Димократї''' ѥстъ ([[срѣдиньскъ ѩзыкъ|срѣдиньскы]] 中华人民共和国, съкращениѥ СНД ѥстъ). Се Въсточны Асїѩ дрьжава ѥстъ и числомь народа наивеличаишии дрьжава свѣта ѥстъ (болѥ 1,3 тьмы тьмъ, народа великость срѣдинне сѫтъ, самоназъваниѥ хан҄ ([[срѣдиньскъ ѩзыкъ|срѣдиньскы]] 汉族   «ханьскъ народъ»). Землѭ четврьтоѥ мѣсто свѣтѣ иметъ, ѹстѫпаѭщи [[Рѡсї|Рѡсїи]], [[Канада|Канадѣ]] и [[Америкы ѥдьнѥны дрьжавы|АѤД]]. Съ часа оглашени Срѣдиньскыѩ Народьныѩ Димократїѩ 1949 годѣ правѧщи Срѣдиннъ комѹнистичьска комма ѥстъ. Срѣдиннъ стольнъ градъ Беи-Ѕин ([[срѣдиньскъ ѩзыкъ|срѣдиньскы]] 北京, «сѣверьнъ стольнъ градъ»). Срѣдиннъ дрьжавьнъ ѩзыкъ [[срѣдиньскъ ѩзыкъ]] ѥстъ.
 
-[[Category:All orphaned pages]]
+{{commonscat|China}}
 [[Category:Страны]]
 
 [[af:Volksrepubliek van Sjina]]
