*Empty MediaWiki Message*

--- a/Мѫголи.mw
+++ b/Мѫголи.mw
@@ -2,16 +2,17 @@
 | знамѧ= [[Видъ:Flag of Mongolia.svg|150px]]
 | знакъ = [[image:Mongolia coa.gif|80px]]
 | map = LocationMongolia.png
-| Стол҄ьнъ градъ = Ѹлан-Баторъ
+| Стольнъ градъ = Ѹланбатаръ
 | Ѩзыкъ = 
 | Глава = 
 | area =
 | Людии =  2 832 224
 | Почѧта = 1911
 }}
-'''Мѫголи''' (''Монгол Улс'') велика страна въ срѣдьн̑ии [[Асї|Асїи]] ѥстъ.
+'''Мѫголи''' (''Монгол Улс'') велика страна въ срѣдьн̑ии [[Асї|Асїи]] ѥстъ. Людии 2,8 леѡдръ обитаѥтъ. Стольнъ градъ [[Ѹланбатаръ]] ѥсть.
 
-[[Category:All orphaned pages]]
+{{commonscat|Mongolia}}
+
 [[Category:Страны]]
 
 [[af:Mongolië]]
