*Empty MediaWiki Message*

--- a/Охрїдъ.mw
+++ b/Охрїдъ.mw
@@ -1,2 +1,31 @@
-'''Охридъ''' ѥстъ градъ [[Македонїıа|Македонїѩ]]. 
+{{Градъ|Имѧ = Охридъ
+| знамѧ= Flag of Ohrid.gif
+| знакъ = Coat of Arms of Ohrid.png
+| Дрьжава = Македонї
+| Глава = Алеѯандръ Петрески
+| Людии = 55,700 
+| Основанъ = 
+| Харта = [[Видъ:MK Ohrid.png|250px]]
+}}
+'''Охридъ''' ѥстъ градъ [[Македонїıа|Македонїѩ]]. Охридѣ людии 55,700 обитаѥтъ.
 [[Category:Гради]]
+[[ru:Охрид]]
+[[be-x-old:Охрыд]]
+[[bg:Охрид (село)]]
+[[bs:Ohrid]]
+[[cs:Ohrid]]
+[[da:Ohrid]]
+[[de:Ohrid]]
+[[el:Οχρίδα]]
+[[en:Ohrid]]
+[[es:Ohrid]]
+[[fa:اوهرید]]
+[[fr:Okhrid]]
+[[ja:オフリド]]
+[[mk:Охрид]]
+[[nl:Ohrid]]
+[[pl:Ochryda]]
+[[ro:Ohrid]]
+[[sq:Ohri]]
+[[sr:Охрид]]
+[[sv:Ohrid]]
