*Empty MediaWiki Message*

--- a/Коуманово.mw
+++ b/Коуманово.mw
@@ -1,2 +1,35 @@
-'''Кѹманово''' ѥстъ градъ [[Македонїıа|Македонїѩ]]. 
+{{Градъ|Имѧ = Кѹманово
+| знамѧ= Flag of Kumanovo.png
+| знакъ = CoatKumanovo.png
+| Дрьжава = Македонї
+| Глава = 
+| Людии = 105 484 
+| Основанъ = 1519
+| Харта = [[Видъ:MK Kumanovo.png|250px]]
+}}
+'''Кѹманово''' ѥстъ градъ [[Македонїıа|Македонїѩ]]. Людии 105 484 обитаѥтъ. Кѹманово бол҄ии градъ Македонїѩ по [[Съкопиѥ|Съкопи]] ѥстъ
 [[Category:Гради]]
+[[bg:Куманово (град)]]
+[[ca:Kumanovo]]
+[[cs:Kumanovo]]
+[[da:Kumanovo]]
+[[de:Kumanovo]]
+[[en:Kumanovo]]
+[[es:Kumanovo]]
+[[fi:Kumanovo]]
+[[fr:Koumanovo (République de Macédoine)]]
+[[hr:Kumanovo]]
+[[hsb:Kumanovo]]
+[[it:Kumanovo]]
+[[lt:Kumanovas]]
+[[mk:Куманово]]
+[[nl:Kumanovo]]
+[[no:Kumanovo]]
+[[pl:Kumanowo]]
+[[pt:Kumanovo]]
+[[ro:Kumanovo]]
+[[sh:Kumanovo]]
+[[sq:Kumanova]]
+[[sr:Куманово]]
+[[sv:Kumanovo]]
+[[vo:Kumanovo]]
