/* Грькъ наибол҄ьше гради */

--- a/Грьци.mw
+++ b/Грьци.mw
@@ -57,7 +57,7 @@
 * [[Ѳессалонїка]] – людии обитаѥтъ 348 920.
 * [[Патра]] – людии обитаѥтъ 164 741.
 * [[Ираклїѥ]]  – людии обитаѥтъ 140 357.
-* [[Корінѳъ]] – людии обитаѥтъ 36,555.
+* [[Корїнѳъ]] – людии обитаѥтъ 36 555.
 
 == Зьри такожде ==
 {{commonscat|Greece}}
