--- a/Корїнѳъ.mw
+++ b/Корїнѳъ.mw
@@ -10,6 +10,7 @@
 [[Видъ:Acrocorinto.jpg|thumb|left|]]
 '''Корїнѳъ''' ({{Lang-el|Κόρινθος}}) градъ [[Грьци|Грьцѣхъ]] ѥстъ. Людии обитаѥтъ 36,5 тысѫщь
 
+{{Commonscat|Corinth}}
 [[Category:Гради]]
 [[Category:Грьци]]
 
