--- a/Сєдмица.mw
+++ b/Сєдмица.mw
@@ -49,12 +49,13 @@
 [[it:Settimana]]
 [[ja:週]]
 [[jv:Peken]]
+[[kg:Mposo]]
 [[ko:주 (시간)]]
 [[ksh:Woch]]
 [[kw:Seythun]]
 [[la:Hebdomas]]
 [[lad:Semana]]
-[[ln:Mokolo ya Mposo]]
+[[ln:Mpɔ́sɔ]]
 [[lt:Savaitė]]
 [[lv:Nedēļa]]
 [[mg:Herinandro]]
@@ -73,7 +74,6 @@
 [[qu:Simana]]
 [[ro:Săptămână]]
 [[ru:Неделя]]
-[[ru-sib:Семмица]]
 [[sh:Sedmica]]
 [[simple:Week]]
 [[sl:Teden]]
