*Empty MediaWiki Message*

--- a/Оужицє.mw
+++ b/Оужицє.mw
@@ -1,17 +1,18 @@
-{{Градъ|name = Ѹжице
+{{Градъ|Имѧ = Ѹжице
 | знамѧ = 
 | знакъ = Uzice.jpg
 | Дрьжава = Срьбїıа
 | Глава = Тихомир Петковић
 | Людии = 54,717
 | Основанъ = ?
-| map = [[Видъ:Serbia Užice.png|200 px]]
+| Харта = [[Видъ:Serbia Užice.png|200 px]]
 |}}
 
 '''Ѹжице''' ([[ѩзыкъ срьбьскъ|срьбьскы]]: ''Ужице'') [[градъ]] ѥстъ [[Срьбїıа|Срьбїѩ]]. На рѣцѣ имѧнемъ [[Дѣтин]] построѥнъ ѥстъ, помѣновенъ запрьва лѣта 1329 ѥстъ. Главьнъ градъ Златиборьскы области ѥстъ.
 
 [[Image:Uzice-by-pedja-supurovic-07.jpg|thumb|left|180px|Црькы]]
 [[Image:Uzice-by-pedja-supurovic-02.JPG|thumb|left|180px|Старъ градъ]]
+{{commonscat|Užice}}
 [[Category:Гради]]
 [[Category:Срьбї]]
 
