*Empty MediaWiki Message*

--- a/Касторїꙗ.mw
+++ b/Касторїꙗ.mw
@@ -1,2 +1,12 @@
-'''Костѹръ''' ([[Грьчьскъ ѩзыкъ|грьчьскы]]: ''Καστοριά'') градъ [[Грьци|Грькъ]] сѣверозападьнѣ чѧсти ѥстъ.
+{{Градъ|Имѧ = Костѹръ
+| знамѧ = 
+| знакъ = 
+| Дрьжава = Грьци
+| Глава = 
+| Людии = 
+| Основанъ = 
+| Харта = 
+|}}
+'''Костѹръ''' ({{lang-el|Καστοριά}}) градъ [[Грьци|Грькъ]] сѣверозападьнѣ чѧсти ѥстъ.
 [[Category:Гради]]
+[[Category:Грьци]]
