*Empty MediaWiki Message*

--- a/Касторїꙗ.mw
+++ b/Касторїꙗ.mw
@@ -3,10 +3,20 @@
 | знакъ = 
 | Дрьжава = Грьци
 | Глава = 
-| Людии = 
+| Людии = 16,218
 | Основанъ = 
 | Харта = 
 |}}
-'''Костѹръ''' ({{lang-el|Καστοριά}}) градъ [[Грьци|Грькъ]] сѣверозападьнѣ чѧсти ѥстъ.
+'''Костѹръ''' ({{lang-el|Καστοριά}}) градъ [[Грьци|Грькъ]] сѣверозападьнѣ чѧсти ѥстъ. Людии обитаѥтъ 16,218.
+
+{{commonscat|Kastoria}}
 [[Category:Гради]]
 [[Category:Грьци]]
+[[en:Kastoria]]
+[[fr:Kastoria]]
+[[pl:Kastoria]]
+[[ro:Kastoria]]
+[[simple:Kastoria]]
+[[sr:Костур (град)]]
+[[sv:Kastoria]]
+[[tr:Kesriye]]
