*Empty MediaWiki Message*

--- a/Касторїꙗ.mw
+++ b/Касторїꙗ.mw
@@ -1,4 +1,4 @@
-{{Градъ|Имѧ = Костѹръ
+{{Градъ|Имѧ = Касторї
 | знамѧ = 
 | знакъ = 
 | Дрьжава = Грьци
@@ -7,7 +7,7 @@
 | Основанъ = 
 | Харта = 
 |}}
-'''Костѹръ''' ({{lang-el|Καστοριά}}) градъ [[Грьци|Грькъ]] сѣверозападьнѣ чѧсти ѥстъ. Людии обитаѥтъ 16,218.
+'''Касторї''' ({{lang-el|Καστοριά}}) градъ [[Грьци|Грькъ]] сѣверозападьнѣ чѧсти ѥстъ. Людии обитаѥтъ 16,218.
 
 {{commonscat|Kastoria}}
 [[Category:Гради]]
