*Empty MediaWiki Message*

--- a/Ꙁагрєбъ.mw
+++ b/Ꙁагрєбъ.mw
@@ -7,7 +7,7 @@
 | Основанъ = 1094
 | Харта = [[Видъ:CroatiaGradZagreb.png]]
 |}}
-'''Загребъ''' ([[Хръватьскъ ѩзыкъ|хръватьскы]] ''Zagreb'') [[Хръватьска|Хръватьскы]] стольнъ градъ ѥсть. Загребѣ людии обитаѥтъ 779 145, построѥнъ рѣцѣ [[Сава|Савѣ]] ѥсть. Загребъ основанъ ѥсть 1094, градъ съ лѣта 1242 ѥсть. Града имѧ Градьцъ бѣаше.
+'''Загребъ''' ([[Хръватьскъ ѩзыкъ|хръватьскы]] ''Zagreb'') [[Хръватьска|Хръватьскы]] стольнъ градъ ѥстъ. Загребѣ людии обитаѥтъ 779 145, построѥнъ рѣцѣ [[Сава|Савѣ]] ѥстъ. Загребъ основанъ ѥстъ 1094, градъ съ лѣта 1242 ѥстъ. Града имѧ Градьцъ бѣаше.
 [[Category:Гради]]
 [[Category:Стольни гради]]
 [[Category:Хръватьска]]
