*Empty MediaWiki Message*

--- a/Словѣньско.mw
+++ b/Словѣньско.mw
@@ -9,7 +9,7 @@
 | Людии = 5 леѡдръ
 | Почѧта = 1993
 }}
-'''Словѣньско''' ([[Карпатьско-словѣньскъ ѩзыкъ|карпатьско-словѣньскы]] ''Slovensko'') дрьжава срѣдьнѩѩ [[Еѵрѡпа|Еѵрѡпы]] ѥсть. Стольнъ градъ Словѣнскы [[Братислава]] ѥсть. Словѣньскы людии 5 леѡдръ обитаѥтъ. Дрьжавьнъ ѩзыкъ Словѣньскы [[Карпатьско-словѣньскъ ѩзыкъ|карпатьско-словѣньскъ]] ѥстъ. Словѣньско съставѣ [[Чешьскословѣньско|Чешьскословѣньсцѣ]] послѣди [[Прьва Свѣтьна Воина|Прьвыѩ Свѣтьныѩ Воины]] въшьла бѣаше. Послѣди распада Чешьскословѣньска Словѣньско стала ѥсть пакы самостотѣльна дрьжава.
+'''Словѣньско''' ([[Карпатьско-словѣньскъ ѩзыкъ|карпатьско-словѣньскы]] ''Slovensko'') дрьжава срѣдьнѩѩ [[Еѵрѡпа|Еѵрѡпы]] ѥстъ. Стольнъ градъ Словѣнскы [[Братислава]] ѥстъ. Словѣньскы людии 5 леѡдръ обитаѥтъ. Дрьжавьнъ ѩзыкъ Словѣньскы [[Карпатьско-словѣньскъ ѩзыкъ|карпатьско-словѣньскъ]] ѥстъ. Словѣньско съставѣ [[Чешьскословѣньско|Чешьскословѣньсцѣ]] послѣди [[Прьва Свѣтьна Воина|Прьвыѩ Свѣтьныѩ Воины]] въшьла бѣаше. Послѣди распада Чешьскословѣньска Словѣньско стала ѥсть пакы самостотѣльна дрьжава.
 
 
 [[Category:Словѣньско]]
