--- a/Алєѯандръ_Макєдоньскъ.mw
+++ b/Алєѯандръ_Макєдоньскъ.mw
@@ -2,7 +2,7 @@
 '''Алеѯандръ Македоньскъ''' ('''Алеѯандръ Великъ''', [[Грьчьскъ ѩзыкъ|грьчьскы]]: ''Αλέξανδρος ο Μέγας'') бѣ цѣсарь [[Македонїıа|Македонїѩ]], сынъ македоньска цѣсар Фїлїпа.
 
 Алеѯандръ покори [[Грьци|Грькы]], [[цѣсарьство Персьскоѥ|Персы]] и дрѹгыѩ. Съзьда цѣсарьство великоѥ, коѥго стольнъ градъ бѣ [[Вавѵлѡнъ]]. Се цѣсарьство распада сѧ по съмрьти Алеѯандра.    
-
+{{commonscat|Alexander the Great}}
 [[Category:All orphaned pages]]
 [[Category:Македоньци]]
 [[Category:Грьци]]
