*Empty MediaWiki Message*

--- a/Алєѯандръ_Макєдоньскъ.mw
+++ b/Алєѯандръ_Макєдоньскъ.mw
@@ -1,5 +1,5 @@
 [[Image:AlexanderTheGreat Bust.jpg|thumb|Алеѯандръ Македоньскъ]]
-'''Алеѯандръ Македоньскъ''' ('''Алеѯандръ Великъ''', [[Грьчьскъ ѩзыкъ|грьчьскы]]: ''Αλέξανδρος ο Μέγας'') бѣ цѣсарь [[Македонїıа|Македонїѩ]], сынъ македоньска цѣсар Фїлїпа.
+'''Алеѯандръ Македоньскъ''' ('''Алеѯандръ Г Великъ''', [[Грьчьскъ ѩзыкъ|грьчьскы]]: ''Αλέξανδρος ο Μέγας'';  їюлѣ 21 числа 356 лѣта до РХ — їюнѣ 10 числа 323 лѣта до РХ) бѣ цѣсарь [[Македонїıа|Македонїѩ]] съ 336 лѣта до РХ, сынъ македоньска цѣсар Фїлїпа В.
 
 Алеѯандръ покори [[Грьци|Грькы]], [[цѣсарьство Персьскоѥ|Персы]] и дрѹгыѩ. Съзьда цѣсарьство великоѥ, коѥго стольнъ градъ бѣ [[Вавѵлѡнъ]]. Се цѣсарьство распада сѧ по съмрьти Алеѯандра.    
 {{commonscat|Alexander the Great}}
